# lapack_mre

./: .gitignore  LICENSE  README.md  gen_openblas_pc.py  hello.cpp  meson.build
.github/workflows/: wheels.yml
.openblas/: scipy-openblas.pc
